--- a/BookVerse/BookVerse.csproj
+++ b/BookVerse/BookVerse.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Book.DataAccess\Book.DataAccess.csproj" />
+    <ProjectReference Include="..\Book.DataAccess\Book.DataAccessLayer.csproj" />
     <ProjectReference Include="..\Book.Models\Book.Models.csproj" />
   </ItemGroup>
 
